Fix variable names in template

--- a/templates/interface/RedHat.erb
+++ b/templates/interface/RedHat.erb
@@ -139,11 +139,11 @@ OVSREQURIES="<%= @ovsrequries %>"
 <% if @team_master -%>
 TEAM_MASTER="<%= @team_master %>"
 <% end -%>
-<% if @team_port_config -%>
-TEAM_PORT_CONFIG="<%= @team_port_config %>"
+<% if @team_port_cfg -%>
+TEAM_PORT_CONFIG="<%= @team_port_cfg %>"
 <% end -%>
-<% if @team_config -%>
-TEAM_CONFIG="<%= @team_config %>"
+<% if @team_cfg -%>
+TEAM_CONFIG="<%= @team_cfg %>"
 <% end -%>
 <% if @check_link_down == true -%>
 check_link_down() {
