Fix teaming config in Red Hat template

--- a/templates/interface/RedHat.erb
+++ b/templates/interface/RedHat.erb
@@ -161,10 +161,10 @@ OVSREQURIES="<%= @ovsrequries %>"
 TEAM_MASTER="<%= @team_master %>"
 <% end -%>
 <% if @team_port_cfg -%>
-TEAM_PORT_CONFIG="<%= @team_port_cfg %>"
+TEAM_PORT_CONFIG='<%= @team_port_cfg %>'
 <% end -%>
 <% if @team_cfg -%>
-TEAM_CONFIG="<%= @team_cfg %>"
+TEAM_CONFIG='<%= @team_cfg %>'
 <% end -%>
 <% if @check_link_down == true -%>
 check_link_down() {
