Add support for el ipv6 routes

--- a/templates/rule6-RedHat.erb
+++ b/templates/rule6-RedHat.erb
@@ -2,6 +2,6 @@
 ### File managed by Puppet
 ###
 <%- (0..(@iprule.length-1)).each do |id| -%>
-<%- if @family and @family[id] != 'inet6' -%>
+<%- if @family and @family[id] == 'inet6' -%>
 <%= @iprule[id] %>
 <% end -%><% end -%>
